--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,15 @@
 {
   "name": "Download a Cross",
   "description": "Browse crossword puzzles from the archives of all major crossword publishers",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "permissions": [
     "storage",
     "activeTab",
-    "downloads",
-    "https://picayune.uclick.com/*",
-    "https://www.nytimes.com/*",
-    "https://blogs.wsj.com/*",
-    "http://crosswordfiend.com/*",
-    "http://herbach.dnsalias.com/*",
-    "http://www.brendanemmettquigley.com/*",
-    "http://www.chronicle.com/*",
-    "https://www.newyorker.com/*"
+    "downloads"
+  ],
+  "optional_permissions": [
+    "http://*/",
+    "https://*/"
   ],
   "browser_action": {
     "default_title": "Download a Cross",
