--- a/manifest.json
+++ b/manifest.json
@@ -4,14 +4,12 @@
   "version": "0.4.0",
   "permissions": [
     "storage",
-    "activeTab",
-    "downloads"
-
+    "downloads",
+    "unlimitedStorage"
   ],
   "optional_permissions": [
     "http://*/",
-    "https://*/",
-    "unlimitedStorage"
+    "https://*/"
   ],
   "browser_action": {
     "default_title": "Download a Cross",
